fix alignment in colour picker... again...

--- a/src/components/ui-component/templates/colour-picker.css
+++ b/src/components/ui-component/templates/colour-picker.css
@@ -14,11 +14,12 @@ reason: https://github.com/angular/material/issues/6214
 .color-picker-wrapper.color-picker-swatch-only.color-picker-open {
     width: 32px;
 }
-.color-picker-wrapper.color-picker-swatch-only.color-picker-open.color-picker-show-alpha .color-picker-panel.color-picker-panel-right.color-picker-show-inline {
-    right: 142px;
-}
+
 .color-picker-wrapper.color-picker-swatch-only.color-picker-open .color-picker-panel.color-picker-panel-right.color-picker-show-inline {
     right: 122px;
+}
+.color-picker-wrapper.color-picker-swatch-only.color-picker-open .color-picker-panel.color-picker-panel-right.color-picker-show-inline.color-picker-show-alpha {
+    right: 142px;
 }
 
 .color-picker-wrapper .input-group .input-group-addon {
